[package]
    name = "discord-sandbox"
    version = "0.1.0"
    authors = ["kata-gatame <nathan@kata.codes>"]
    edition = "2018"

[dependencies]
    async-trait = "0.1.9"
    dotenv = "0.15.0"
    rand = "0.6.0"
    tracing = "0.1.23"
    tracing-subscriber = "0.2"

[dependencies.serenity]
    features = [
        "cache",
        "collector",
        "framework",
        "standard_framework",
        "rustls_backend"
    ]
    version = "0.10"

[dependencies.tokio]
    features = [
        "macros",
        "signal",
        "rt-multi-thread"
    ]
    version = "1.0"