[package]
    name = "discord-sandbox"
    version = "0.1.0"
    authors = ["kata-gatame <nathan@kata.codes>"]
    edition = "2018"

[dependencies]
	async-trait = "0.1.9"
    dotenv = "0.15.0"
    rand = "0.8"
    regex = "1"
    tracing = "0.1"
    tracing-futures = "0.2"

[dependencies.serenity]
    version = "0.10.0"
    default-features = false
    features = [
        "builder",
        "cache",
        "collector",
        "client",
        "framework",
        "gateway",
        "http",
        "model",
        "standard_framework",
        "utils",
        "rustls_backend",
    ]

[dependencies.tokio]
    features = [ "full" ]
    version = "1.0"

[dependencies.tracing-subscriber]
    features = [ "env-filter" ]
    version = "0.2"
